--- a/desafio-nlwreturn8-rocketseat/style.css
+++ b/desafio-nlwreturn8-rocketseat/style.css
@@ -8,12 +8,15 @@
 
 :root {
 
-  --primary-color: hsl(170, 100%, 26%);
+  --hue: 290;
+  --primary-color: hsl(var(--hue), 100%, 26%);
   --headline: hsl(210, 11%, 15%);
   --paragraph: hsl(210, 9%, 31%);
 
   --brand-beige: hsl(39, 100%, 97%);
-  --brand-light: hsl(148, 23%, 89%);
+  --brand-light: hsl(calc(var(--hue) ), 23%, 89%);
+  --brand-dark: hsl(var(--hue), 100%, 14%);
+
   --bg-light: hsl(180, 14%, 97%);
 
   /* Melhorar acessibilidade visualização da tela - fonte padrão do navegador é 16px para 100%
@@ -91,6 +94,65 @@ section .content p {
 
   color: var(--paragraph);
 }
+
+.button {
+  background: var(--primary-color);
+
+  border: none;
+  border-radius: 4rem;
+
+  margin-bottom: 6rem;
+
+  padding: 1.6rem 3.2rem;
+  width: fit-content;
+  /* width: fit-content == largura vai se adaptar ao conteúdo  */
+
+  color: white;
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-transform: uppercase;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.6rem;
+
+  text-decoration: none;
+  transition: background 200ms;
+}
+.button:hover {
+  background-color: var(--brand-dark);
+}
+
+.social-links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3.2rem;
+}
+/* custom colors */
+#services .card circle {
+  fill: var(--brand-light);
+}
+#navigation .logo path[fill*='#00856F'],
+#backToTopButton circle {
+  fill: var(--primary-color);
+}
+
+button.open-menu path[stroke*='#00856F'],
+#contact li path {
+  stroke: var(--primary-color);
+}
+
+body.menu-expanded #navigation .logo path,
+#navigation.scroll .logo path {
+  fill: white;
+}
+
+#navigation.scroll button.open-menu path[stroke*='#00856F'] {
+  stroke: white;
+}
+
 /*=== NAVIGATION =================================*/
 nav {
   display: flex;
@@ -112,13 +174,6 @@ nav .wrapper {
 }
 nav.scroll {
   background: var(--primary-color);  
-}
-nav.scroll .logo path {
-  fill: white;
-}
-
-nav.scroll button path {
-  stroke: white;
 }
 
 nav button {
@@ -210,12 +265,10 @@ body.menu-expanded .menu {
   margin-top: 4.8rem;
   margin-bottom: 8rem;
 }
-
-.social-links {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 3.2rem;
+.menu .button:hover{
+  background-color: var(--primary-color);
+  color: white;
+  filter: brightness(1.3);
 }
 
 body.menu-expanded .logo,
@@ -253,6 +306,9 @@ body.menu-expanded button path {
   z-index: -1;
   /* z-index: -1 = conteúdo vai para trás */
 }
+#home .button {
+  margin: auto;
+}
 
 #home p {
   font-size: 1.8rem;
@@ -263,41 +319,17 @@ body.menu-expanded button path {
   margin-bottom: 3.2rem;
 }
 
-#home button {
-  background: var(--primary-color);
-
-  border: none;
-  border-radius: 4rem;
-
-  margin-bottom: 6rem;
-
-  height: 6.2rem;
-  width: 26.3rem;
-
-  color: white;
-  font-size: 1.4rem;
-  font-weight: 700;
-  text-transform: uppercase;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1.6rem;
-
-  margin-right: auto;
-  margin-left: auto;
-}
 #home img {
   width: 26.4rem;
   display: block;
-  margin-inline: auto;
+  margin: auto;
   object-position: 0 2rem;
 }
 
 #home .stats {
   width: 32.7rem;
   padding-block: 4rem;
-  margin-inline: auto;
+  margin: auto;
 
   background-color: var(--brand-beige);
   border: 1px solid var(--brand-light);
@@ -362,4 +394,80 @@ body.menu-expanded button path {
 #about .content p {
   margin-top: 2.4rem;
   margin-bottom: 6rem;
+}
+
+/*=== CONTACT =================================*/
+#contact {
+  text-align: left;
+}
+
+#contact header {
+  margin-bottom: 3.2rem;
+}
+
+#contact ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+
+  margin-bottom: 3.2rem;
+}
+
+#contact ul li {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+/*=== FOOTER =================================*/
+footer {
+  background-color: var(--primary-color);
+  padding-block: 6rem;
+
+  text-align: left;
+
+  color: white;
+}
+
+footer .logo {
+  display: inline-block;
+  /* display: inline-block >> mantem as propriedades em linha e destrave umas propriedades block */
+  margin-bottom: 2.4rem;
+}
+
+footer .logo svg {
+  width: 23.6rem;
+  height: 3.1rem;
+}
+
+footer .logo path {
+  fill: white;
+}
+
+footer p {
+  color: var(--brand-beige);
+  line-height: 2;
+
+  margin-bottom: 3.2rem;
+}
+
+footer .social-links {
+  justify-content: flex-start;
+}
+ /* BACK TO TOP */
+#backToTopButton {
+  position: fixed;
+  bottom: 1rem;
+  right: 2.5rem;
+
+  opacity: 0;
+  visibility: hidden;
+
+  transform: translateY(100%);
+  transition: 200ms;
+}
+
+#backToTopButton.show {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
 }
